# airlet

./: .gitignore  AGENTS.md  Cargo.toml  README.md
assets/models/converted/: source_spec.toml  spec.toml
crates/airlet/: Cargo.toml
crates/airlet-model/: Cargo.toml
crates/airlet-model/src/: lib.rs
crates/airlet/presets/: a-dry.json
crates/airlet/src/: audio.rs  compat.rs  defaults.rs  engine.rs  lib.rs  mechanism.rs  model.rs  notation.rs  performance.rs  preset.rs  render_config.rs  score.rs  songs.rs  synthesis.rs
docs/: aaa-lighting-research.md  architecture-code-quality-audit.md  asset-generation.md  mcp.md  roadmap.md
py/: README.md  pyproject.toml
py/airlet_audio_lab/: __init__.py  analyze_reference.py  audio_io.py  bake_materials.py  build_aligned_base_model.py  build_manual_bevel_handoff.py  comb_motion_sequence.py  debug_client.py  generate_textures.py  lighting_shots.py  mcp_server.py  modal.py  music.py  probe_model.py  render_air_probe.py  round_wood_shell.py  synth_probe.py  wood_preset_gallery.py
src/: comb_animation.rs  controls.rs  debug.rs  lib.rs  lid.rs  lighting.rs  main.rs  mechanical_audio.rs  mechanism_view.rs  model_view.rs  outline.rs  playback.rs  scene.rs  screenshot.rs  twin.rs  visual_config.rs  winding.rs
