[workspace]
members = ["crates/airlet", "crates/airlet-model"]
resolver = "3"

[workspace.dependencies]
bevy = "0.19"
bevy_egui = "0.40"
glam = "0.30"
rand = "0.10"
rodio = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

[package]
name = "airlet-app"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "airlet"
path = "src/main.rs"

[dependencies]
airlet = { path = "crates/airlet" }
airlet-model = { path = "crates/airlet-model" }
bevy = { workspace = true }
bevy_egui = { workspace = true }
rodio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[profile.dev]
opt-level = 2
